Fixed user widget dropdown alignment issues

--- a/src/features/auth/components/UserWidget/UserWidget.module.css
+++ b/src/features/auth/components/UserWidget/UserWidget.module.css
@@ -5,7 +5,6 @@
   height: 100%;
   background: none;
   border: none;
-  margin-left: 22px;
 }
 
 .widget-container:focus {
@@ -33,22 +32,17 @@
   margin-left: 10px;
 }
 
-.menu {
-  border: 1px solid red;
-  border-radius: 3px;
-  overflow: hidden;
-}
-
 .select-menu {
   background: #fff;
   border: 1px solid var(--primary-border-color);
   border-radius: 3px;
-  width: 135px;
+  width: 140px;
   animation-duration: 300ms;
   animation-name: slideDownAndFade;
   transform: translateY(-12px);
   padding: 12px 15px;
   box-shadow: var(--box-shadow);
+  z-index: 999;
 }
 
 /* Dropdown items */
